--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,25 +1,7 @@
-black==22.10.0
-click==8.1.3
-contourpy==1.0.5
-cycler==0.11.0
-et-xmlfile==1.1.0
-fonttools==4.37.4
-kiwisolver==1.4.4
-matplotlib==3.6.1
-mypy==0.982
-mypy-extensions==0.4.3
-numpy==1.23.3
 openpyxl==3.0.10
-packaging==21.3
 pandas==1.5.0
-pandas-stubs==1.5.0.221003
-pathspec==0.10.1
-Pillow==9.2.0
-platformdirs==2.5.2
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.4
-six==1.16.0
-tomli==2.0.1
-types-pytz==2022.4.0.0
-typing_extensions==4.4.0
+matplotlib==3.6.1
+
+# DEVELOPMENT
+black==22.10.0
+mypy==0.982
